ChangeLog for PyLint
====================

2011-10-07  --  0.25.0
    * #74742: make allowed name for first argument of class method configurable
      (patch by Google)

    * #74087: handle case where inference of a module return YES; this avoid
      some cases of "TypeError: '_Yes' object does not support indexing" (patch
      by Google)

    * #74745: make "too general" exception names configurable (patch by Google)

    * #74747: crash occurs when lookup up a special attribute in class scope
      (patch by google)

    * #76920: crash if on eg "pylint --rcfile"(patch by Torsten Marek)

    * #77237: warning for E0202 may be very misleading

    * #73941: HTML report messages table is badly rendered



2011-07-18  --  0.24.0
    * #69738: add regular expressions support for "generated-members"

    * ids of logging and string_format checkers have been changed:
      logging: 65 -> 12, string_format: 99 -> 13
      Also add documentation to say that ids of range 1-50 shall be reserved
      to pylint internal checkers

    * #69993: Additional string format checks for logging module:
      check for missing arguments, too many arguments, or invalid string
      formats in the logging checker module. Contributed by Daniel Arena

    * #69220: add column offset to the reports. If you've a custom reporter,
      this change may break it has now location gain a new item giving the
      column offset.

    * #60828: Fix false positive in reimport check

    * #70495: absolute imports fail depending on module path (patch by Jacek Konieczny)

    * #22273: Fix --ignore option documentation to match reality



2011-01-11  --  0.23.0
    * documentation update, add manpages

    * several performance improvements

    * finalize python3 support

    * new W0106 warning 'Expression "%s" is assigned to nothing'

    * drop E0501 and E0502 messages about wrong source encoding: not anymore
     interesting since it's a syntax error for python >= 2.5 and we now only